--- a/trajectorysheet.css
+++ b/trajectorysheet.css
@@ -743,6 +743,7 @@ body {
   margin-left:64px;
   position:absolute;
   background-color:#3dee49;
+  opacity:0.7;
 
 }
 
@@ -758,6 +759,44 @@ body {
   width:65px;
   display:inline-block;
   background-color:#de4d4d;
+  vertical-align:top;
+  opacity:0.7;
+}
+
+#tdiUserCentre {
+  height:10px;
+  width:10px;
+  margin-top:61px;
+  margin-left:61px;
+  position:absolute;
+  border-radius:10px;
+  background-color:#ff0000;
+}
+
+#tdiUser {
+  height:3px;
+  width:130px;
+  margin-top:64px;
+  position:absolute;
+
+  -moz-transform: rotate(0deg);
+  -ms-transform: rotate(0deg);
+  -o-transform: rotate(0deg);
+  transform: rotate(0deg);
+}
+
+#tdiUTrans {
+  height:3px;
+  width:65px;
+  display:inline-block;
+  vertical-align:top;
+}
+
+#tdiUSolid {
+  height:3px;
+  width:65px;
+  display:inline-block;
+  background-color:#ffffff;
   vertical-align:top;
 }
 
@@ -812,6 +851,21 @@ body {
 
 .tdiPreciseHighlight {
   background-color:#666666;
+}
+
+.tdiTurn {
+  width:20px;
+  height:55px;
+  display:inline-block;
+  cursor:pointer;
+}
+
+#tdiAnti {
+  background-image:url(assets/trajectory/anti.png);
+}
+
+#tdiClock {
+  background-image:url(assets/trajectory/clock.png);
 }
 
 #tdiCentre {
