--- a/trajectorysheet.css
+++ b/trajectorysheet.css
@@ -24,6 +24,10 @@ body {
   overflow:hidden;
 }
 
+textarea {
+  border:none;
+}
+
 .colourselectbox {
   width:200px;
   height:240px;
@@ -32,7 +36,7 @@ body {
   right:-90px;
   border:5px solid #383838;
   border-radius:3px;
-  z-index:10;
+  z-index:25;
 }
 
 .colourselect {
@@ -210,6 +214,45 @@ body {
   color:white;
   top:0;
   left:0;
+  cursor:move;
+  border:2px solid rgba(0, 0, 0, 0);
+  overflow:hidden;
+  font-size:13px;
+}
+
+.textarea {
+  height:100%;
+  width:100%;
+  padding:0;
+  margin:0;
+  height:100%;
+  resize:none;
+  border:none;
+  background-color:rgba(0, 0, 0, 0);
+  font-size:13px;
+  color:white;
+}
+
+textarea:hover,
+textarea:active,
+textarea:focus,
+textarea
+{
+    outline:0px !important;
+    -webkit-appearance:none;
+}
+
+.textBox {
+  width:70px;
+  height:30px;
+  background-color:#4e4e4e;
+}
+
+.labelColorCircle {
+  width:25px;
+  height:25px;
+  border-radius:15px;
+  display:inline-block;
 }
 
 .labelOptions {
@@ -316,7 +359,7 @@ body {
   width:90px;
   height:15px;
   text-align:center;
-  font-size:12px;
+  font-size:10px;
 }
 
 .labelColor p {
