--- a/trajectorysheet.css
+++ b/trajectorysheet.css
@@ -680,6 +680,10 @@ textarea
 	font-size:30px;
 }
 
+.chargingButtonHighlight {
+  background-color:#464646;
+}
+
 #chargingNumberEdit{
   font-size:40px;
   width:50px;
@@ -930,6 +934,10 @@ textarea
 .percentButton p {
 	margin:0px 10px;
 	font-size:30px;
+}
+
+.percentButtonHighlight {
+  background-color:#343434;
 }
 
 #diSwitchContainer {
@@ -1438,6 +1446,10 @@ textarea
   height:60px;
   position:absolute;
   cursor:pointer;
+}
+
+.realButtonHighlight {
+  background-color:rgba(255, 255, 255, 0.15);
 }
 
 #cVisual {
