--- a/trajectorysheet.css
+++ b/trajectorysheet.css
@@ -1439,11 +1439,12 @@ textarea
   display:inline-block;
   position:relative;
   text-align:center;
+  vertical-align:top;
 }
 
 #cRealButton {
   width:150px;
-  height:60px;
+  height:45px;
   position:absolute;
   cursor:pointer;
 }
@@ -1454,13 +1455,13 @@ textarea
 
 #cVisual {
   width:150px;
-  height:60px;
+  height:45px;
   position:absolute;
 }
 
 #cText {
   width:90px;
-  height:60px;
+  height:45px;
   background-color:#444444;
   display:inline-block;
   vertical-align:top;
@@ -1469,7 +1470,7 @@ textarea
 
 #cSwitch {
   width:60px;
-  height:60px;
+  height:45px;
   display:inline-block;
   vertical-align:top;
 }
@@ -1484,24 +1485,25 @@ textarea
   display:inline-block;
   position:relative;
   text-align:center;
+  vertical-align:top;
 }
 
 #hwcRealButton {
   width:150px;
-  height:60px;
+  height:45px;
   position:absolute;
   cursor:pointer;
 }
 
 #hwcVisual {
   width:150px;
-  height:60px;
+  height:45px;
   position:absolute;
 }
 
 #hwcText {
   width:90px;
-  height:60px;
+  height:45px;
   background-color:#444444;
   display:inline-block;
   vertical-align:top;
@@ -1510,7 +1512,7 @@ textarea
 
 #hwcSwitch {
   width:60px;
-  height:60px;
+  height:45px;
   display:inline-block;
   vertical-align:top;
 }
@@ -1525,6 +1527,7 @@ textarea
   display:inline-block;
   position:relative;
   text-align:center;
+  vertical-align:top;
 }
 
 #stsRealButton {
@@ -1557,6 +1560,100 @@ textarea
 
 #stsSwitch p {
   margin:20px;
+}
+
+#fadeInContainer {
+  width:150px;
+  height:45px;
+  display:inline-block;
+  position:relative;
+  text-align:center;
+  vertical-align:top;
+}
+
+#fiRealButton {
+  width:150px;
+  height:45px;
+  position:absolute;
+  cursor:pointer;
+}
+
+#fiVisual {
+  width:150px;
+  height:45px;
+  position:absolute;
+}
+
+#fiText {
+  width:90px;
+  height:45px;
+  background-color:#494949;
+  display:inline-block;
+  vertical-align:top;
+}
+
+#fiSwitch {
+  width:60px;
+  height:45px;
+  display:inline-block;
+  vertical-align:top;
+}
+
+#fiSwitch p {
+  margin:14px 0px;
+}
+
+#doubleJumpContainer {
+  width:150px;
+  height:45px;
+  display:inline-block;
+  position:relative;
+  text-align:center;
+  vertical-align:top;
+}
+
+#djRealButton {
+  width:150px;
+  height:45px;
+  position:absolute;
+  cursor:pointer;
+}
+
+#djVisual {
+  width:150px;
+  height:45px;
+  position:absolute;
+}
+
+#djText {
+  width:90px;
+  height:45px;
+  background-color:#494949;
+  display:inline-block;
+  vertical-align:top;
+}
+
+#djSwitch {
+  width:60px;
+  height:45px;
+  display:inline-block;
+  vertical-align:top;
+}
+
+#djSwitch p {
+  margin:14px 0px;
+}
+
+#ooHitstunTitle {
+  height:20px;
+  width:150px;
+  background-color:#494949;
+  text-align:center;
+  vertical-align:top;
+}
+
+#ooHitstunTitle p {
+  margin: 2px 0px;
 }
 
 .switchOn {
