--- a/calculatorsheet.css
+++ b/calculatorsheet.css
@@ -44,6 +44,22 @@ textarea {
   display:inline-block;
   vertical-align: top;
   cursor:pointer;
+  position:relative;
+}
+
+
+.colourselectReal {
+  width:40px;
+  height:60px;
+  position:absolute;
+  display:inline-block;
+  top:0px;
+  background-color:white;
+  opacity:0;
+}
+
+.colourselectRealHighlight {
+  opacity:0.2;
 }
 
 .minicolourbox {
@@ -2007,6 +2023,22 @@ textarea
 .tminicolour {
   width:30px;
   height:17px;
+}
+
+.minicolourinfo {
+  width:120px;
+  height:17px;
+  text-align:center;
+  position:absolute;
+  background-color:black;
+  z-index:29;
+  border-radius:5px;
+  font-size:10px;
+  padding:2px;
+}
+
+.minicolourinfo p {
+  margin:3px 0px;
 }
 
 .trajAddBox {
