--- a/calculatorsheet.css
+++ b/calculatorsheet.css
@@ -553,6 +553,23 @@ textarea
   color:white;
 }
 
+#groundedBox {
+  width:90px;
+  height:30px;
+  position:absolute;
+  bottom:0px;
+  left:10px;
+  z-index:1;
+  opacity:0.3;
+  margin:5px;
+}
+
+#groundedBox p {
+  text-align:center;
+  font-size:20px;
+  margin:0;
+}
+
 #mousePosition {
   width:165px;
   height:30px;
